crates/planarc/tree-sitter-pdl/test/corpus/node.txt
==================
Schema Header
==================
schema "docker-compose" grammar="yaml"

---

(source_file
  header: (header
    name: (string)
    grammar_ref: (string)))

==================
Node with multiple definitions
==================

node Service1 {}
node Service2 {}

---

(source_file
  (node_definition
    kind: (fqmn)
    (block))
  (node_definition
    kind: (fqmn)
    (block)))

==================
Match Statement
==================
node Test {
  match `(key) @k` {}
}

---

(source_file
  (node_definition
    kind: (fqmn)
    (block
      (match_stmt
        query: (raw_string)
        (match_block)))))

==================
Extern Declaration
==================

extern std.lint {
  isPascalCase :: name: String -> Diagnostic?

  validateGrammarName :: name: String -> Diagnostic?

  operator / :: left: String, right: String -> String
}

---

(source_file
  (extern_definition
    (fqmn)
    (extern_block
      (extern_def_fn
        (identifier)
        (extern_def_arg
          (identifier)
          (identifier))
        (extern_return
          (identifier)))
      (extern_def_fn
        (identifier)
        (extern_def_arg
          (identifier)
          (identifier))
        (extern_return
          (identifier)))
      (extern_def_fn
        (operator_identifier)
        (extern_def_arg
          (identifier)
          (identifier))
        (extern_def_arg
          (identifier)
          (identifier))
        (extern_return
          (identifier))))))

==================
Extern Declaration Core
==================

extern core {
  operator / :: left: String, right: String -> String
}


---

(source_file
  (extern_definition
    (fqmn)
    (extern_block
      (extern_def_fn
        (operator_identifier)
        (extern_def_arg
          (identifier)
          (identifier))
        (extern_def_arg
          (identifier)
          (identifier))
        (extern_return
          (identifier))))))

==================
Import Declaration
==================

import std.lint

---

(source_file
  (import_definition
    (fqmn)))

==================
Query Declaration
==================

query QueryDefPattern = `
    (query_definition
        name: (identifier) @query_name
        value: (query_literal
            (raw_content) @query_body
        )
    ) @query_def
`

---

(source_file
  (query_definition
    (identifier)
    (query_literal
      (raw_content))))

==================
Nginx hello world
==================

schema "nginx" grammar="nginx"

import std.fs 

query IncludePattern = `include (string)@path;`

node IncludeDirective {
  match IncludePattern {
    @path {
      global -> std.fs.resolve_glob $CURRENT_FILE @path.text
    }
  }
}

---

(source_file
  (header
    (string)
    (string))
  (import_definition
    (fqmn))
  (query_definition
    (identifier)
    (query_literal
      (raw_content)))
  (node_definition
    (fqmn)
    (block
      (match_stmt
        (identifier)
        (match_block
          (capture
            (variable)
            (capture_block
              (graph_bind
                (graph_left_statements
                  (identifier))
                (graph_right_statements
                  (call_func
                    (fqmn)
                    (variable)
                    (variable
                      (property_access))))))))))))

==================
Fact Declaration
==================

fact Node {  
  #auto_id
  file_path: String(p) | std.fs.is_path(p)
  text: String
  start_byte: Int | in [0..]
  end_byte: Int | in [start_byte..]
  tags: List<String | in ["sale", "new", "deprecated"]> 
}
---

(source_file
  (fact_definition
    (identifier)
    (fact_field_definition
      (attribute
        (identifier))
      (identifier)
      (type_annotation
        (type_identifier
          (fqmn))
        (identifier))
      (refinement
        (call_expression
          (dotted_identifier
            (identifier)
            (identifier)
            (identifier))
          (identifier))))
    (fact_field_definition
      (identifier)
      (type_annotation
        (type_identifier
          (fqmn))))
    (fact_field_definition
      (identifier)
      (type_annotation
        (type_identifier
          (fqmn)))
      (refinement
        (in_expression
          (range
            (number)))))
    (fact_field_definition
      (identifier)
      (type_annotation
        (type_identifier
          (fqmn)))
      (refinement
        (in_expression
          (range
            (identifier)))))
    (fact_field_definition
      (identifier)
      (type_annotation
        (type_identifier
          (fqmn))
        (type_arguments
          (type_argument
            (type_annotation
              (type_identifier
                (fqmn)))
            (refinement
              (in_expression
                (list_items
                  (string)
                  (string)
                  (string))))))))))

==================
Type Declaration
==================

type ParsableInt = String(x) | std.is_int(x)
type ListPositiveInt = List<i64 | x > 0>
---

(source_file
  (type_declaration
    (identifier)
    (type_annotation
      (type_identifier
        (fqmn))
      (identifier))
    (refinement
      (call_expression
        (dotted_identifier
          (identifier)
          (identifier))
        (identifier)))))
